POM fixes for jdk25 and minor cleanup